feat: add modal new post

--- a/src/app/components/new-post/new-post.component.html
+++ b/src/app/components/new-post/new-post.component.html
@@ -6,8 +6,11 @@
             </section>
         </div>
         <div class="new-post__content col-10 ">
-            <section class="col-12 h-100  d-flex "> 
-                <button class="col-11 h-75">Criar um post</button>
+            <section class="col-12 h-100 pt-3">                
+                <blog-modal postTitle="Novo Post"> 
+                    <button class="col-11 h-75">Criar um post</button>
+                    <blog-form content></blog-form>                   
+                </blog-modal>
             </section>
         </div>
     </div>
