--- a/src/app/components/contents/contents.component.html
+++ b/src/app/components/contents/contents.component.html
@@ -1,6 +1,6 @@
 <div class="contents container d-flex pt-3 pb-2">
     <div class="contents__left col-xxl-2 col-xl-2 col-lg-3 d-none d-lg-block d-xl-block d-xxl-block pt-3 pb-3">
-
+        <!--previa do meu perfil,qtd posts publicados, categorias, favoritos etc...-->
     </div>
 
     <div class="contents__center col-xxl-7 col-xl-7 col-lg-9 col-12 ps-3 p-3">
@@ -11,6 +11,6 @@
     </div>
 
     <div class="contents__right col-xxl-3 col-xl-3 d-none d-xl-block d-xxl-block pb-3 pt-3">
-
+        <!--anuncions, outros posts etc...-->
     </div>
 </div>
