feat: add previews

--- a/src/app/components/contents/contents.component.scss
+++ b/src/app/components/contents/contents.component.scss
@@ -6,5 +6,10 @@
 
 div:nth-child(odd){
     background-color: transparent;
-    border: solid 1px black;
+   
+}
+
+.announcement{
+    position: sticky;
+    top:90px;
 }
