--- a/src/app/components/new-post/form/form.component.html
+++ b/src/app/components/new-post/form/form.component.html
@@ -2,16 +2,16 @@
     <div class="form__content col-12 h-100">
         <form class="col-12">
             <fieldset>
-                <input class="title" placeholder="Title" type="text" 
+                <input class="title" placeholder="Titulo" type="text" 
                 name="title" id="title">
             </fieldset>
             <fieldset>
-                <input class="url-image" placeholder="Image Url" type="text" 
+                <input class="url-image" placeholder="Url da imagem" type="text" 
                 name="url-image" id="url-image">
             </fieldset>
 
             <fieldset>
-                <textarea class="text" placeholder="What do you want to share?" 
+                <textarea class="text" placeholder="O que quer compartilhar hoje?" 
                 name="text" id="text" cols="30" rows="5"></textarea>
             </fieldset>
 
@@ -26,8 +26,8 @@
                 
                 
                 <section class="radios-privacy col-12 col-sm-12 col-md-6 mt-2 mt-md-0">                   
-                    <input type="radio" checked name="privacy" id="public"> <label for="public">Public</label>
-                    <input type="radio" name="privacy" id="private">  <label for="private">Private</label>
+                    <input type="radio" checked name="privacy" id="public"> <label for="public">Publico</label>
+                    <input type="radio" name="privacy" id="private">  <label for="private">Privado</label>
                 </section>
             </div>
 
