--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,5 +1,8 @@
 <main class="posts col-12 mt-2">
     <div class="posts__container col-12">
         <blog-post></blog-post>
+        <blog-post></blog-post>
+        <blog-post></blog-post>
+        <blog-post></blog-post>
     </div>
 </main>
