--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -26,7 +26,7 @@
         <div class="post__text bg-white ps-4 pe-4 mt-2">
             <h4 class="post__text__title bg-white mb-0">Titulo do post</h4>
             <small class="post__text__details bg-white">               
-                02/01/2023 - nature - public
+                02/01/2023 - natureza - publico
             </small>
 
             <p class="post__text__content bg-white mt-2" >
