feat:add modal of new post, add profile button, add core directory

--- a/src/app/components/contents/contents.component.html
+++ b/src/app/components/contents/contents.component.html
@@ -12,7 +12,8 @@
     <div class="contents__right col-xxl-3 col-xl-3 d-none d-xl-block d-xxl-block pb-3">
         <blog-another-posts></blog-another-posts>
 
-        <div class="announcement">            
+
+  <div class="announcement" blogPointer >            
             <blog-announcement></blog-announcement>
         </div>        
     </div>
