--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary p-2">
+<nav class="navbar navbar-expand-lg bg-body-tertiary p-2" >
   <div class="container">
     <a class="navbar-brand" href="#">
       <span>My</span>_Blog
@@ -13,11 +13,9 @@
         <button class="search__button btn " type="submit">Buscar</button>
       </form>
 
-      <div class="profile ms-5 w-25 d-flex flex-nowrap">
-        <p class="navbar-profile__name">nome do usuario</p>
-        <div class="navbar-profile__photo">aaaaaa
-          <img class="navbar-profile__img" src="" alt="">
-        </div>
+      <div class="profile ms-5 w-25 pt-2 pb-2 d-flex justify-content-center align-items-center flex-nowrap">
+        <p class="navbar-profile__name m-0 me-2">Ver perfil </p>  
+        <fa-icon [icon]="faArrowRight"></fa-icon>
       </div>
     </div>
   </div>
