--- a/src/app/components/posts/posts.component.scss
+++ b/src/app/components/posts/posts.component.scss
@@ -1,10 +1,29 @@
 @import "../../../assets/styles/colors.scss";
-@import '../../../assets/styles/details.scss';
+@import "../../../assets/styles/details.scss";
 
-.posts{
+.posts {
+  display: flex;
+  justify-content: center;
+  .loading {
+    position: absolute;
+    margin-top: 200px;
+    opacity: 0.2;
+    display: flex;
+    flex-direction: column;
 
-    &__container{
-        //@include b-shadow-default;
-        @include b-radius-default;
+    &__img{
+        transform: scale(2);
+        margin-bottom: 40px;
+        align-self: center;
     }
+
+    p{
+        font-size:18px;
+        opacity: 1;
+    }
+  }
+
+  &__container {
+    @include b-radius-default;
+  }
 }
