feat: add close modal, emit posts and another-posts component

--- a/src/app/components/new-post/form/form.component.html
+++ b/src/app/components/new-post/form/form.component.html
@@ -40,8 +40,8 @@
                 </section>                
                 
                 <section class="radios-privacy col-12 col-sm-12 col-md-6 mt-2 mt-md-0">                   
-                    <input type="radio" formControlName="privacy" value="public" checked name="privacy" id="public"> <label for="public">Publico</label>
-                    <input type="radio" formControlName="privacy" value="privacy" name="privacy" id="private">  <label for="private">Privado</label>
+                    <input type="radio" formControlName="privacy" value="publico" checked name="privacy" id="public"> <label for="public">Publico</label>
+                    <input type="radio" formControlName="privacy" value="privado" name="privacy" id="private">  <label for="private">Privado</label>
                 </section>
             </div>
 
