--- a/src/app/components/previews/another-posts/another-posts.component.html
+++ b/src/app/components/previews/another-posts/another-posts.component.html
@@ -1,15 +1,21 @@
 <div class="another-posts col-12 bg-white pt-2 pb-1">
     <b class="d-flex justify-content-center mb-3 fs-6">Outras publicações</b>
 
-    <div class="col-12 " >
+    <div class="col-12 " *ngIf="posts; else loading" >
         <ul>
-            <li *ngFor="let a of [1, 2, 3, 4, 5]">
+            <li *ngFor="let post of posts;">
                 <a>
-                    <b>Lorem, ipsum dolor sit amet abcdefgh...</b>
+                    <b>{{post.title}}</b>
                 </a>
                 <br>
-                <span class="d-flex justify-content-end me-3">12/12/2004</span>
+                <span class="d-flex justify-content-end me-3">{{post.date | date: 'dd/MM/yyyy':'UTC'}}</span>
             </li>         
         </ul>
     </div>
+
+    <ng-template #loading>
+        <p class="loading m-auto">
+            Carregando ...
+        </p>
+    </ng-template>
 </div>
