--- a/src/app/components/previews/another-posts/another-posts.component.scss
+++ b/src/app/components/previews/another-posts/another-posts.component.scss
@@ -9,6 +9,15 @@
   &>b {
     color: $blue-soft;
   }
+
+  p.loading{
+    display: flex;
+    justify-content:center;
+    align-items:center;
+
+    padding: 10px 0;
+    opacity: .7;
+  }
 }
 
 span{
