--- a/src/app/components/contents/contents.component.html
+++ b/src/app/components/contents/contents.component.html
@@ -1,20 +1,20 @@
 <div class="contents container d-flex pt-5 pb-5">
     <div class="contents__left col-xxl-2 col-xl-2 col-lg-3 d-none d-lg-block d-xl-block d-xxl-block pb-3">
         <!--previa do meu perfil,qtd posts publicados, categorias, favoritos etc...-->
-        <blog-previews></blog-previews>       
+        <blog-previews></blog-previews>
     </div>
 
-    <div class="contents__center col-xxl-7 col-xl-7 col-lg-9 col-12 ps-0 p-0 ps-lg-3 pe-lg-3 ">       
+    <div class="contents__center col-xxl-7 col-xl-7 col-lg-9 col-12 ps-0 p-0 ps-lg-3 pe-lg-3 ">
         <blog-new-post></blog-new-post>
-        <blog-posts></blog-posts>
+        <blog-posts (postEmitter)="receivePosts($event)"></blog-posts>
     </div>
 
     <div class="contents__right col-xxl-3 col-xl-3 d-none d-xl-block d-xxl-block pb-3">
-        <blog-another-posts></blog-another-posts>
+        <blog-another-posts [posts]="posts"></blog-another-posts>
 
 
-  <div class="announcement" blogPointer >            
+        <div class="announcement" blogPointer>
             <blog-announcement></blog-announcement>
-        </div>        
+        </div>
     </div>
 </div>
