--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -10,7 +10,7 @@
           <h1 class="modal-title fs-5" id="exampleModalLabel">
             {{postTitle}}
           </h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button #exitModalButton type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
             <ng-content select="[content]"></ng-content>
