feat: fix close modal and add filter post by search

--- a/src/app/components/new-post/new-post.component.html
+++ b/src/app/components/new-post/new-post.component.html
@@ -2,7 +2,7 @@
     <div class="new-post__container col-12 pt-3 pb-3">
         <div class="new-post__photo col-2 pt-3 pb-3">
             <section class="col-12">
-                <img class="img-fluid" src="https://lavainana.com.br/wp-content/uploads/2018/07/Maranha%CC%83o-Barreirinhas-LagoaBonita-5.jpg" alt="">
+                <img class="img-fluid" src="https://this-person-does-not-exist.com/img/avatar-gen2f0042272054013280f7679d0e10c557.jpg" alt="">
             </section>
         </div>
         <div class="new-post__content col-10 ">
