--- a/src/app/components/previews/perfil/perfil.component.html
+++ b/src/app/components/previews/perfil/perfil.component.html
@@ -3,7 +3,7 @@
 
     <div class="perfil__prev__info col-12 ">
         <div class="prev col-12">
-            <img class="img-fluid mb-1" src="https://lavainana.com.br/wp-content/uploads/2018/07/Maranha%CC%83o-Barreirinhas-LagoaBonita-5.jpg" alt="">
+            <img class="img-fluid mb-1" src="https://this-person-does-not-exist.com/img/avatar-gen2f0042272054013280f7679d0e10c557.jpg" alt="">
 
             <div class="description d-flex justify-content-center flex-column">
                 <a class=" d-block mt-auto d-flex justify-content-center ">@Wendell</a>
