--- a/src/app/components/contents/contents.component.scss
+++ b/src/app/components/contents/contents.component.scss
@@ -13,3 +13,9 @@ div:nth-child(odd){
     position: sticky;
     top:90px;
 }
+
+.search{
+    margin: -10px 0 -10px 0;
+    opacity: .7;
+    font-size: 16px;
+}
