--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -4,7 +4,7 @@
             <div class="post__header col-12 d-flex">
                 <div class="post__header__photo col-2 bg-white">
                     <div class="post__header__photo__image bg-white">
-                        <img class="img-fluid" src="https://lavainana.com.br/wp-content/uploads/2018/07/Maranha%CC%83o-Barreirinhas-LagoaBonita-5.jpg" alt="">
+                        <img class="img-fluid" src="https://this-person-does-not-exist.com/img/avatar-gen2f0042272054013280f7679d0e10c557.jpg" alt="">
                     </div>
                 </div>
                 <div class="post__header__description col-10 bg-white">
