--- a/src/app/components/previews/another-posts/another-posts.component.html
+++ b/src/app/components/previews/another-posts/another-posts.component.html
@@ -1,15 +1,15 @@
 <div class="another-posts col-12 bg-white pt-2 pb-1">
     <b class="d-flex justify-content-center mb-3 fs-6">Outras publicações</b>
 
-    <div class="col-12 " *ngIf="posts; else loading" >
+    <div class="col-12 " *ngIf="posts; else loading">
         <ul>
             <li *ngFor="let post of posts;">
                 <a>
-                    <b>{{post.title}}</b>
+                    <b>{{post.title | slice: 0:30 }}{{post.title.length > 30 ? '...' : ''}}</b>
                 </a>
                 <br>
                 <span class="d-flex justify-content-end me-3">{{post.date | date: 'dd/MM/yyyy':'UTC'}}</span>
-            </li>         
+            </li>
         </ul>
     </div>
 
