--- a/src/app/components/contents/contents.component.scss
+++ b/src/app/components/contents/contents.component.scss
@@ -18,4 +18,11 @@ div:nth-child(odd){
     margin: -10px 0 -10px 0;
     opacity: .7;
     font-size: 16px;
+    display: inline;
+    margin-right: 15px;
+
+    &+a:hover{
+       text-decoration: underline;
+       cursor: pointer;
+    }
 }
