--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -9,5 +9,9 @@
 
     <div class="posts__container col-12">
         <blog-post *ngFor="let post of posts" [post]=post></blog-post>
+        <p class="posts__not-found" *ngIf="posts.length == 0 && postSearched">
+            <img class="img-fluid" src="../../../assets/images/not found.png" alt="">
+            Nenhuma publicação encontrada.
+        </p>
     </div>
 </main>
