--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -17,14 +17,15 @@
             </div>
         </div>
 
-        <div class="post__photo col-12">
-            <div class="post__photo__image bg-black ">
+        <div *ngIf="post.image" class="post__photo col-12">
+            <div class="post__photo__image bg-black">
                 <img class="img-fluid " [src]="post.image" alt="">
             </div>
         </div>
 
         <div class="post__text bg-white ps-4 pe-4 mt-2">
             <h4 class="post__text__title bg-white mb-0">{{post.title}}</h4>
+            <br>
             <small class="post__text__details bg-white">               
                 {{post.date | date: 'dd/MM/yyyy': 'UTC'}} - {{post.category}} - {{post.privacy}}
             </small>
